ignite ws sim updates